cmake_minimum_required(VERSION 3.12)
set( CMAKE_VERBOSE_MAKEFILE on )
project(diplom LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)

set(ZLIB_LIBRARIES zlibstatic)
SET(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
SET(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_STATIC_LIB ON)
set(BUILD_STATIC_LIB ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}) 

add_subdirectory(${CMAKE_SOURCE_DIR}/external/assimp-5.0.1)

add_subdirectory(source)

